# form-catch

./: .actrc  .gitignore  .pre-commit-config.yaml  README.md  TODO.md  alembic.ini  alembic_scripting.ini  api-admin  formtest.html  main.py  pyproject.toml  requirements.txt
.github/workflows/: CI.yml
commands/: custom.py
config/: helpers.py  metadata.py  settings.py
database/: db.py
form_catch/: main.py
form_catch/auth/: __init__.py  auth.py
form_catch/config/: __init__.py  settings.py
form_catch/database/: db.py
form_catch/helpers/: slug.py
form_catch/models/: site.py  user.py  users.py
form_catch/resources/: form.py  home.py  routes.py  site.py
form_catch/schemas/: email.py  site.py  user.py
form_catch/templates/: submission.html
helpers/: slug.py
html_example/: formtest.html  style.css  submitted.html
managers/: user.py
migrations/: env.py
migrations/versions/: 0a8f61e10feb_add_redirect_url_field_to_database.py  290573eb9d06_add_users_and_auth.py  7c76210d2b84_add_sites_model.py  9ae35235b8c8_link_users_to_sites_table.py  ba9b92915cfa_add_email_to_sites_model.py  e4ec28f9be4a_add_fastapi_users.py  e77860c4b84e_add_sites_table.py
models/: site.py
resources/: form.py  home.py  routes.py  site.py
schemas/: email.py  form.py  site.py
templates/: submission.html
tests/: conftest.py  test_auth_routes.py  test_home_routes.py
tests/integration/: test_home_routes.py  test_user_routes.py
tests/unit/: test_auth_manager.py  test_slug_helper.py
