[tool.poetry]
name = "form-catch"
version = "0.1.0"
description = "API to catch form submissions from a website"
authors = ["Grant Ramsay <seapagan@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = { extras = ["standard"], version = "^0.21.1" }
alembic = "^1.10.3"
python-decouple = "^3.8"
python-multipart = "^0.0.6"
fastapi-mail = { extras = ["httpx"], version = "^1.2.7" }
email-validator = "1.3.1"
sqlalchemy = "1.4.47"
databases = "^0.7.0"
asyncpg = "^0.27.0"
psycopg2 = "^2.9.6"


[tool.poetry.group.dev.dependencies]
pydocstyle = "^6.3.0"
flake8-docstrings = "^1.7.0"
flake8 = "^6.0.0"
black = "^23.3.0"
pylint = "^2.17.2"
pep8-naming = "^0.13.3"
openapi-readme = "^0.2.2"
bandit = "^1.7.5"
poethepoet = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
serve = "uvicorn form_catch.main:app --reload"
