[tool.poetry]
name = "Form Catcher"
version = "0.1.0"
description = "Capture Form data from your static websites"
authors = ["Grant Ramsay (seapagan) <seapagan@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.98.0"
alembic = "^1.11.1"
python-decouple = "^3.8"
python-multipart = "^0.0.6"
email-validator = "1.3.1"
sqlalchemy = "1.4.48"
databases = "^0.7.0"
asyncpg = "^0.27.0"
psycopg2 = "^2.9.6"
PyJWT = "^2.7.0"
Jinja2 = "^3.1.2"
rich = "^13.4.2"
asyncclick = "^8.1.3.4"
anyio = "^3.7.0"
tomli = "^2.0.1"
tomli-w = "^1.0.0"
typer = { version = "^0.8", extras = ["all"] }

[tool.poetry.dependencies.uvicorn]
extras = ["standard"]
version = "^0.22.0"

[tool.poetry.dependencies.fastapi-mail]
extras = ["httpx"]
version = "^1.3.1"

[tool.poetry.dependencies.passlib]
extras = ["bcrypt"]
version = "^1.7.4"

[tool.poetry.group.dev.dependencies]
pydocstyle = "^6.3.0"
flake8-docstrings = "^1.7.0"
flake8 = "^6.0.0"
black = "^23.3.0"
pylint = "^2.17.4"
pep8-naming = "^0.13.3"
openapi-readme = "^0.2.2"
bandit = "^1.7.5"
poethepoet = "^0.20.0"
pre-commit = "^3.3.3"
flake8-pyproject = "^1.2.3"
pytest = "^7.4.0"
httpx = "0.23.3"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.3.1"
pytest-sugar = "^0.9.7"
pytest-randomly = "^3.12.0"
pytest-reverse = "^1.6.0"

[tool.poe.tasks]
serve = "uvicorn main:app --reload"
pre = "pre-commit run --all-files"

[tool.flake8]
exclude = ["__init__.py", ".git", "migrations/versions/*"]
max-line-length = 80
docstring-convention = "google"

[tool.bandit]
exclude_dirs = ["config/settings.py", "schemas/examples.py"]

[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py']

[tool.pydocstyle]
add-ignore = ["D104"]

[tool.pytest.ini_options]
filterwarnings = ["ignore:'crypt' is deprecated:DeprecationWarning"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
